--- a/HTML/conteudos.html
+++ b/HTML/conteudos.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="conteudos.css">
+    <link rel="stylesheet" href="/CSS/conteudos.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -31,7 +31,7 @@
 
 
     <section class="cards">
-      <div class="card" id="primeiro">
+      <div class="card" id="primeiro" id="starter">
         <div class="card_img" id="">
           <P>01</P>
           <img src="https://storage.googleapis.com/golden-wind/bootcamp-launchbase/assets/starter.svg" alt="Curso">
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="card" id="segundo">
+      <div class="card" id="segundo" id="launchbase">
         <div class="card_img" id="">
           <P>02</P>
           <img src="https://storage.googleapis.com/golden-wind/bootcamp-launchbase/assets/launchbase.svg" alt="Curso">
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <div class="card" id="terceiro">
+      <div class="card" id="terceiro" id="gostack">
         <div class="card_img" id="">
           <P>03</P>
           <img src="https://storage.googleapis.com/golden-wind/bootcamp-launchbase/assets/gostack.svg" alt="Curso">
@@ -83,22 +83,21 @@
     </section>
 
     <div class="modal-overlay">
-      <div class="modal">
+      <div class="modal" id="modal-do-max">
         <a class="close-modal">
           <i class="material-icons">close</i>
-          <span class="material-icons">
-            open_in_full
-            </span>
+        </a>
+        <a class="maxi-modal">
+          <span class="material-icons">open_in_full</span>
         </a>
 
         <div class="modal-content">
-<!--           video qui-->  
-          <iframe src="https://rocketseat.com.br/starter" frameborder="0"></iframe>
+          <iframe src="" frameborder="0"></iframe>
          </div>
       </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="/JS/scripts.js"></script>
 
 </body>
 </html>
