--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 <!--     <link rel="stylesheet" href="desafio.css">
  -->
-    <link rel="stylesheet" href="desafio.css">
+    <link rel="stylesheet" href="/CSS/desafio.css">
     <link rel="stylesheet" href="https://discordapp.com/invite/gCRAFhc">
 
 </head>
